tests/neg/type_alias_collision_var.baa
// EXPECT: متصادم مع اسم نوع بديل

نوع معرف = ط٦٤.

صحيح الرئيسية() {
    معرف معرف = ١.
    إرجع ٠.
}
